0.6.0
Fixed segfault in image class.
Removed some old 'c' code.
Minor menu stack fix.
Fixed labels on translucent windows.
Fixed version number in .pc file.
Fixed spurious enter/exit callbacks when clicking gadget.
Fixed set/unset keep above/below.
Fixed setting gadget callbacks to NULL to stop callback.
Fixed setting enter/exit, mouse pressed/released separately.
Added callback for mouse enter/exit.

0.5.2
Added support for colour names including a 8 bit alpha def eg "#80ff00ff".
Added transparent windows ( see examples/subwindows ).
Loads of gui fixes.
Moved to 32bit tru colour windows.

0.5.1
Minor gui fix on scrollable menus.
Fixed scrolling sub menus.
Moved all monitor data/fnctios to main application class.
Fixed getting correct monitor for window.
Added scrollable menu.
Fixed makeall script.
Fixed stack smashing errors.
Set exapander gadget to use window back colour.
Install default colour scheme to ~/.config/LFS on first run of library.
Added default colour scheme.
Fixed about example.
Fixed not not setting button font colour form prefs.
Set default time out in app class.
Code clean.
Fixed paths in installed themes.
Fixed live update on font dialog.
Fixed lineedit size in expander gadget.
Fixed set label colour.
New prefs class.
Updates to config file format.
Fixed window pixmap.
Extra API's.
Removed unneeded xsync's.
Fixed paste in line edit.
Added default cut/copy/paste context menu to line edit.
Added drop callback on multiline edit.
Cleaned dropping file on (multi)line edit.
Fixed .desktop file preview in file dialog.
Code clean.

0.5.0
Fixed dragging image.
Removed unneeded xflush/xsync.
Updated basic example to show drop on gadget.
All gadgets can now handle DnD.
Fixed themepaths in installed themes.
Fixed display correct checkbox png.
Fixed memory leaks.
Fixed not picking up png's for check box.
Fixed spurious scrollbar events.
Fixed theme path prefs.
Fixed tool window events.
Updated all examples.
Added reload globals to LFSTK_lib.