@@ -1,4 +1,5 @@
 0.6.0
+Fixed mouse enter/exit callbacks in toggle.
 Fixed segfault in image class.
 Removed some old 'c' code.
 Minor menu stack fix.
